@@ -1,3 +1,7 @@
+2014-08-22  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Loader.cpp: 
+
 2014-08-21  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Browser.cpp: 
