@@ -1,3 +1,7 @@
+2014-08-22  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* InputUrlStream.cpp: 
+
 2014-07-15  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* InputUrlStream.cpp: 
